--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,11 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: custom
+          fields: commit,repo
           custom_payload: |
             {
               attachments: [{
-                image_url: 'https://raw.githubusercontent.com/mlefebvre/updates-vaccination/main/screenshot.png'
+                image_url: "https://raw.githubusercontent.com/mlefebvre/updates-vaccination/main/screenshot.png",
               }]
             }
         env:
