--- a/.github/workflows/vaccin.yml
+++ b/.github/workflows/vaccin.yml
@@ -57,3 +57,18 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+
+      - uses: 8398a7/action-slack@v3
+        if: steps.screenshot1identify.outputs.output != steps.screenshot2identify.outputs.output
+        with:
+          status: custom
+          fields: commit,repo
+          custom_payload: |
+            {
+              attachments: [{
+                text: "Y'a eu un update!",
+                "image_url": "https://raw.githubusercontent.com/mlefebvre/updates-vaccination/main/screenshot.png",
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
