--- a/.github/workflows/couvre-feu.yml
+++ b/.github/workflows/couvre-feu.yml
@@ -20,4 +20,4 @@ jobs:
               }]
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.TEST_SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
