--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,5 +24,17 @@ jobs:
       id: stats
       run:  python update-qc-stats.py
       
-    - name: Test
-      run: echo ${{ steps.stats.outputs.cases }}
+    - name: Commit stats
+      continue-on-error: true
+      run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add daily_stats.txt
+        git commit -m "New daily stats"
+        
+    - name: Push stats
+      if: ${{ success() }}
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
