--- a/.github/workflows/stats-covid.yml
+++ b/.github/workflows/stats-covid.yml
@@ -57,7 +57,7 @@ jobs:
                 },
                 {
                   "title": "Actifs",
-                  "value": "${{ steps.stats.outputs.cases }}"
+                  "value": "${{ steps.stats.outputs.active }}"
                 },
                 {
                   "title": "Rétablis",
