--- a/.github/workflows/communiques-vaccin.yml
+++ b/.github/workflows/communiques-vaccin.yml
@@ -48,4 +48,4 @@ jobs:
       env:
         INCOMING_WEBHOOK_URL: ${{ secrets.TEST_SLACK_WEBHOOK_URL }}
       with:
-        text: "Nouveaux communiqués!: \n"${{ steps.communiques.outputs.communiques }}""
+        text: "Nouveaux communiqués!: \n${{ steps.communiques.outputs.communiques }}"
