--- a/.github/workflows/communiques-vaccin.yml
+++ b/.github/workflows/communiques-vaccin.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add daily_stats.txt
+        git add communiques.json
         git commit -m "New communiques"
         
     - name: Push stats
