--- a/.github/workflows/communiques-vaccin.yml
+++ b/.github/workflows/communiques-vaccin.yml
@@ -46,6 +46,6 @@ jobs:
       if: steps.commit.outcome == 'success'
       uses: tokorom/action-slack-incoming-webhook@main
       env:
-        INCOMING_WEBHOOK_URL: ${{ secrets.TEST_SLACK_WEBHOOK_URL }}
+        INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       with:
         text: "Nouveaux communiqués!\n${{ steps.communiques.outputs.communiques }}"
